        - Check Recommends/Suggests only when all hard dependencies are
          satisfied.
      - Worker:
        - Don't pass --force-conflicts to 'install' subaction of heterogeneous
          actions, all conflicts should be already resolved at that stage.
        - Perform unconditional merge if 'unpack' action is dependent
          (directly or indirectly) on appropriate 'configure' one.
    - Core:
      - 'version_string_regex': allow debian part of the version contain '_',
        however Cupt::Cache::Package will print a warning in this case.
        (Closes: #541268)
  * debian/control:
    - Made 'cupt' binary package depend on sensible-utils which is not
      essential.
    - Bumped 'Standards-Version' to 3.8.3, no changes needed.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Tue, 11 Aug 2009 19:40:52 +0300

cupt (0.5.2) unstable; urgency=low

  * cupt:
    - Fixed a regression since 0.5.1 when using '+' and '-' expression
      suffixes.
  * Cupt:
    - System:
      - Worker:
        - While building action dependencies graph, deal properly with
          'abc' depends on 'x | y | ...' cases when 'x' is going to be
          removed and 'y' is going to be installed. Thanks to Daniel Moerner.
          (Closes: #539953)
        - While building action dependencies graph, ensure that if the action
          dependency has even one "not eat" property it won't be lost even in
          complicated merge scenarios (Closes: #540957).
        - While splitting heterogeneous actions, don't require additional dpkg
          flags not for 'configure' action, but for last one, which may differ.
    - Config:
      - Added configuration option 'dir::etc::preferencesparts'.
    - Cache:
      - Honor 'dir::etc::preferencesparts' option.
    - Download:
      - Manager,Method,Methods/Debdelta:
        - Implemented debdelta integration. Big thanks to A Mennucc1.
      - Progress:
        - New method 'get_overall_downloaded_size'.